# vkarious

./: AGENTS.md  Dockerfile  LICENSE  README.md  db_hash.py  db_hash_fast.py  design-doc.md  docker-compose-plan.md  docker-compose.yml  logical_diff.py  physical_diff.py  push_test_data.py  pyproject.toml  remaining-ddl.md  row_hash.py  row_hash_all_tables.py  task.md
example-docker-compose/: Dockerfile  README.md  docker-compose.yml
hash_rust/: Cargo.toml  tunordered.py
hash_rust/src/: main.rs
src/vkarious/: __init__.py  change_capture.py  cli.py  db.py
src/vkarious/migration/: vkarious_1.sql  vkarious_2.sql
src/vkarious/sql/: change_capture.sql
tests/: test_change_capture.py  test_cli.py  test_ddl_integration.py
vkapgx/pg_hashdb/: Cargo.toml  README-build-in-docker.md  pg_hashdb.control  task.md
vkapgx/pg_hashdb/pg_regress/sql/: setup.sql
vkapgx/pg_hashdb/sql/: pg_hashdb.sql
vkapgx/pg_hashdb/src/: lib.rs
