[project]
name = "vkarious"
version = "0.1.0"
description = "Tool to get snapshots of PostgreSQL databases."
authors = [{name = "Vkarious Developers", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "blake3>=1.0.5",
    "click>=8.1.7",
    "psycopg[binary]>=3.1.18",
]

[project.scripts]
vkarious = "vkarious.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vkarious"]

[tool.hatch.build.targets.sdist]
include = ["src/vkarious"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
